# scangen

./: .gitignore  Cargo.toml  README.md
data/: test_generate_code.rs
data/expected/: test_generate_code.rs
src/: ast.rs  character_class.rs  compiled_dfa.rs  dfa.rs  dot.rs  errors.rs  generator.rs  index.rs  lib.rs  match_function.rs  matching_state.dot  matching_state.rs  multi_pattern_dfa.rs  multi_pattern_nfa.rs  nfa.rs  parser.rs  rust_code_formatter.rs  single_pattern_dfa.rs
src/common/: compiled_data.rs  match_type.rs  matching_state.rs  mod.rs  span.rs
src/compiletime/: ast.rs  character_class.rs  compiled_dfa.rs  dfa.rs  dot.rs  errors.rs  generator.rs  ids.rs  match_function.rs  mod.rs  multi_pattern_dfa.rs  multi_pattern_nfa.rs  nfa.rs  parser.rs  rust_code_formatter.rs
src/runtime/: dfa.rs  find_matches.rs  mod.rs  regex.rs  scanner.rs  scanner_builder.rs  scanner_mode.rs
