[package]
name = "scangen"
version = "0.1.0"
edition = "2021"

[dependencies]
dot-writer = { version = "0.1.3", optional = true }
itertools = { version = "0.13.0", optional = true }
log = { version = "0.4.21", optional = true }
regex-syntax = { version = "0.8.4", optional = true }
thiserror = { version = "1.0.61", optional = true }

[dev-dependencies]
env_logger = "0.11.3"
regex = "1.10.5"

[features]
default = ["generate", "runtime"]
generate = ["dep:dot-writer", "dep:itertools", "dep:log", "dep:regex-syntax", "dep:thiserror"]
runtime = []
